# svb-stablecoins-liquidity

./: .gitignore  README.md  pyproject.toml
src/data/collection/: curve_3pool.py  etherscan.py  fetch_stablecoin_prices.py  findTopPools.py  getPoolData_daily.py  getPoolData_hourly.py  getPositionsData.py  getRawPositions.py  getTVLStablecoin.py  getTVL_defillama.py  getTicks.py  pools_config.py  ticksProcessing.py  trace_lp_wallets.py  uniswap_v2.py  uniswapv3_async.py
src/data/processing/: MCI_ticks.py  investigate_tick_levels.py  joinMCIdetailed.py  summaryLiquidityAndPools.py
src/modeling/: DiD_Panel_experiments.py  _common.py  analytics_ticks.py  tvl_fee_validation.py
src/modeling/testing/: testCalcLiquidity.py  testCalcMCI.py  testCalcRealTokens.py  testLiquidityPositions.py  testLiquidityPositions_date.py  testLiquidityTicks.py  testLiquidityTicks_date.py
