[project]
name = "svb-stablecoins-liquidity"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp==3.14.1",
    "dateparser~=1.3.0",
    "fastparquet~=2025.12.0",
    "filelock~=3.25.0",
    "gql==4.0.0",
    "jupyter==1.1.1",
    "linearmodels==7.0",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "pandas-stubs~=3.0.0.260204",
    "python-dotenv~=1.2.2",
    "ratelimit>=2.2.1",
    "requests==2.32.5",
    "scikit-learn~=1.8.0",
    "scipy~=1.17.1",
    "scipy-stubs~=1.17.1",
    "seaborn==0.13.2",
    "statsmodels==0.14.6",
    "tqdm==4.67.3",
    "web3~=7.14.1",
    "wildboottest>=0.3.2",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.12.0",
]
